--- a/src/Rinha/appsettings.Development.json
+++ b/src/Rinha/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "Default": "Host=postgres;Port=9998;Database=postgres;Username=postgres;Password=postgres;Maximum Pool Size=100;Connection Pruning Interval=1;Connection Idle Lifetime=2;Enlist=false;No Reset On Close=true"
+    "Default": "Host=localhost;Port=9998;Database=postgres;Username=postgres;Password=postgres;Maximum Pool Size=100;Connection Pruning Interval=1;Connection Idle Lifetime=2;Enlist=false;No Reset On Close=true"
   }
 }
