--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       resources:
         limits:
           cpus: '0.15'
-          memory: '0.5GB'
+          memory: '50MB'
 
   api2:
     # API - Instância 01
@@ -36,7 +36,7 @@ services:
       resources:
         limits:
           cpus: '0.15'
-          memory: '0.5GB'
+          memory: '50MB'
 
   nginx:
     # Load Balancer
@@ -52,7 +52,7 @@ services:
       resources:
         limits:
           cpus: '0.1'
-          memory: '0.4GB'
+          memory: '10MB'
 
   postgres:
     # Banco de dados
@@ -78,4 +78,4 @@ services:
       resources:
         limits:
           cpus: '1.3'
-          memory: '1.4GB'
+          memory: '440MB'
