--- a/src/Rinha/Dockerfile
+++ b/src/Rinha/Dockerfile
@@ -17,4 +17,4 @@ RUN dotnet publish "Rinha.fsproj" -c Release -o /app/publish /p:UseAppHost=false
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "App.dll"]
+ENTRYPOINT ["dotnet", "Rinha.dll"]
