--- a/src/Rinha/appsettings.json
+++ b/src/Rinha/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Host=postgres;Port=5432;Database=postgres;Username=postgres;Password=postgres;Minimum Pool Size=50;Maximum Pool Size=2000;Connection Pruning Interval=1;Connection Idle Lifetime=2;Enlist=false;No Reset On Close=true"
+    "Default": "Host=postgres;Port=5432;Database=postgres;Username=postgres;Password=postgres;Minimum Pool Size=100;Maximum Pool Size=2000;Connection Pruning Interval=1;Connection Idle Lifetime=10;Enlist=false;No Reset On Close=true;Multiplexing=true"
   }
 }
