--- a/src/postgresql.conf
+++ b/src/postgresql.conf
@@ -1,17 +1,17 @@
 ﻿listen_addresses = '*'
-max_connections = 1000
+max_connections = 2000
 superuser_reserved_connections = 3
 unix_socket_directories = '/var/run/postgresql'
-shared_buffers = 800MB
-work_mem = 4MB
+shared_buffers = 40MB
+work_mem = 16MB
 maintenance_work_mem = 256MB
 effective_cache_size = 1GB
 wal_buffers = 64MB
 checkpoint_timeout = 10min
-checkpoint_completion_target = 0.9
+checkpoint_completion_target = 0.95
 random_page_cost = 4.0
 effective_io_concurrency = 2
-autovacuum = off
+autovacuum = on
 log_statement = 'none'
 log_duration = off
 log_lock_waits = on
